# ScopeFS

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
docs/: design.md  ui_showcase.md
include/scopefs/: block_device.hpp  config.hpp  coordinator.hpp  kernel.hpp  model.hpp  shell.hpp  terminal.hpp  trace.hpp  ui.hpp  util.hpp
qa/: check_after_after.scope  check_after_before.scope  concurrent_locks.ps1  cp_cow.ps1  crash_after_commit.scope  crash_before_commit.scope  demo.scope  permissions.scope  run_all.ps1  teaching_acl.ps1  time_attrs.ps1  trace_command_tx.ps1  ui_showcase.scope  ui_width_smoke.ps1
src/: block_device.cpp  coordinator.cpp  kernel.cpp  main.cpp  shell.cpp  terminal.cpp  trace.cpp  ui.cpp  util.cpp
